finishing the docs!

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -17,8 +17,12 @@
     "QArchive Compression Formats": "QArchive Compression Formats",
     "QArchiveReader": "Class QArchive::Reader",
     "QArchive::Reader": "QArchive::Reader",
+    "UsingCompressor": "Using QArchive to Compress a set of files",
+    "Compressing files with QArchive": "Compressing files with QArchive",
     "UsingExtractor": "Using QArchive to Extract Archives",
     "Extracting Archives with QArchive": "Extracting Archives with QArchive",
+    "UsingReader": "Using QArchive to Read Archives",
+    "Reading Archives using QArchive.": "Reading Archives using QArchive.",
     "Docs": "Docs",
     "Help": "Help",
     "Blog": "Blog",
