Update Extractor docs and Update QArchive Signal Codes

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -9,8 +9,8 @@
     "Installation": "Installation",
     "QArchiveCompressor": "Class QArchive::Compressor",
     "QArchive::Compressor": "QArchive::Compressor",
-    "QArchiveErrorCodes": "QArchive error codes",
-    "QArchive error codes": "QArchive error codes",
+    "QArchiveErrorCodes": "QArchive Error Codes",
+    "QArchive Error Codes": "QArchive Error Codes",
     "QArchiveExtractor": "Class QArchive::Extractor",
     "QArchive::Extractor": "QArchive::Extractor",
     "QArchiveFormats": "QArchive Supported Compression Formats",
