--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -7,24 +7,18 @@
     "AddingQArchive": "Add QArchive to Your Qt Project",
     "Adding QArchive to Your Qt Project": "Adding QArchive to Your Qt Project",
     "Installation": "Installation",
-    "QArchiveCompressor": "Class QArchive::Compressor",
-    "QArchive::Compressor": "QArchive::Compressor",
+    "QArchiveDiskCompressor": "Class QArchive::DiskCompressor",
+    "QArchive::DiskCompressor": "QArchive::DiskCompressor",
+    "QArchiveDiskExtractor": "Class QArchive::DiskExtractor",
+    "QArchive::DiskExtractor": "QArchive::DiskExtractor",
     "QArchiveErrorCodes": "QArchive Error Codes",
     "QArchive Error Codes": "QArchive Error Codes",
-    "QArchiveExtractor": "Class QArchive::Extractor",
-    "QArchive::Extractor": "QArchive::Extractor",
     "QArchiveFormats": "QArchive Supported Compression Formats",
     "QArchive Compression Formats": "QArchive Compression Formats",
-    "QArchiveReader": "Class QArchive::Reader",
-    "QArchive::Reader": "QArchive::Reader",
-    "QArchiveSignalCodes": "QArchive Signal Codes",
-    "QArchive Signal Codes": "QArchive Signal Codes",
-    "UsingCompressor": "Using QArchive to Compress a set of files",
+    "UsingDiskCompressor": "Using QArchive to Compress a set of files and directories.",
     "Compressing files with QArchive": "Compressing files with QArchive",
-    "UsingExtractor": "Using QArchive to Extract Archives",
+    "UsingDiskExtractor": "Using QArchive to Extract Archives",
     "Extracting Archives with QArchive": "Extracting Archives with QArchive",
-    "UsingReader": "Using QArchive to Read Archives",
-    "Reading Archives using QArchive.": "Reading Archives using QArchive.",
     "Docs": "Docs",
     "Help": "Help",
     "Blog": "Blog",
