Update documentation guides.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -6,6 +6,10 @@
     "tagline": "A Simple Archiver for Qt Projects.",
     "AddingQArchive": "Add QArchive to Your Qt Project",
     "Adding QArchive to Your Qt Project": "Adding QArchive to Your Qt Project",
+    "CreatingEncryptedZipArchiveGuide": "Creating Encrypted ZIP Archive using QArchive",
+    "Creating Encrypted ZIP Archive using QArchive": "Creating Encrypted ZIP Archive using QArchive",
+    "ExtractingPasswordProtectedArchiveGuide": "Extracting encrypted Archives using QArchive",
+    "Extracting Password Protected Archives using QArchive": "Extracting Password Protected Archives using QArchive",
     "Installation": "Installation",
     "QArchiveDiskCompressor": "Class QArchive::DiskCompressor",
     "QArchive::DiskCompressor": "QArchive::DiskCompressor",
@@ -15,10 +19,12 @@
     "QArchive Error Codes": "QArchive Error Codes",
     "QArchiveFormats": "QArchive Supported Compression Formats",
     "QArchive Compression Formats": "QArchive Compression Formats",
-    "UsingDiskCompressor": "Using QArchive to Compress a set of files and directories.",
-    "Compressing files with QArchive": "Compressing files with QArchive",
-    "UsingDiskExtractor": "Using QArchive to Extract Archives",
-    "Extracting Archives with QArchive": "Extracting Archives with QArchive",
+    "ReportingProgressGuide": "Reporting Progress for Extraction",
+    "Reporting Progress for Extraction": "Reporting Progress for Extraction",
+    "SimpleCompressorGuide": "Simple Compressor using QArchive",
+    "Creating Simple Compressor using QArchive": "Creating Simple Compressor using QArchive",
+    "SimpleExtractorGuide": "Simple Extractor using QArchive",
+    "Creating a Simple Extractor using QArchive": "Creating a Simple Extractor using QArchive",
     "Docs": "Docs",
     "Help": "Help",
     "Blog": "Blog",
