--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -25,6 +25,14 @@
         "title": "Installing QArchive.",
         "sidebar_label": "Installation"
       },
+      "MemoryCompressorGuide": {
+        "title": "Simple Compressor using QArchive (In Memory)",
+        "sidebar_label": "Creating Simple Compressor (In Memory)"
+      },
+      "MemoryExtractorGuide": {
+        "title": "Simple Extractor using QArchive (In Memory)",
+        "sidebar_label": "Creating a Simple Extractor (In Memory)"
+      },
       "QArchiveDiskCompressor": {
         "title": "Class QArchive::DiskCompressor",
         "sidebar_label": "QArchive::DiskCompressor"
