--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -49,6 +49,10 @@
         "title": "QArchive Supported Compression Formats",
         "sidebar_label": "QArchive Compression Formats"
       },
+      "QArchiveMemoryCompressor": {
+        "title": "Class QArchive::MemoryCompressor",
+        "sidebar_label": "QArchive::MemoryCompressor"
+      },
       "ReportingProgressGuide": {
         "title": "Reporting Progress for Extraction",
         "sidebar_label": "Reporting Progress"
