--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -57,6 +57,14 @@
         "title": "Class QArchive::MemoryExtractor",
         "sidebar_label": "QArchive::MemoryExtractor"
       },
+      "QArchiveMemoryExtractorOutput": {
+        "title": "Class QArchive::MemoryExtractorOutput",
+        "sidebar_label": "QArchive::MemoryExtractorOutput"
+      },
+      "QArchiveMemoryFile": {
+        "title": "Class QArchive::MemoryFile",
+        "sidebar_label": "QArchive::MemoryFile"
+      },
       "ReportingProgressGuide": {
         "title": "Reporting Progress for Extraction",
         "sidebar_label": "Reporting Progress"
